# chick-distributor

./: .gitignore  Anchor.toml  Readme.MD  solchick-readme-v1.txt
UI/: .eslintrc  package.json
UI/src/: App.tsx
UI/src/components/: Claim.tsx  Close.tsx  Create.tsx
UI/src/components/DefaultModal/: index.tsx
UI/src/components/Header/: Header.tsx
UI/src/components/Settings/: index.tsx
UI/src/contexts/: AccountContext.tsx  ConnectionContext.tsx
UI/src/contexts/WalletContext/: WalletContext.tsx
UI/src/utils/: accounts.ts  claimant.ts  transactions.ts
bak/: package.json
cli/: package.json  tsconfig.json  whitelist.json
cli/src/: gumdrop-cli.ts
cli/src/helpers/: accounts.ts  constants.ts  instructions.ts  metadata.ts  transactions.ts  various.ts
cli/src/helpers/gumdrop/: claimant.ts  communication.ts
programs/chick-distributor/: Cargo.toml
programs/chick-distributor/src/: lib.rs
tests/: chick-distributor.ts
