[package]
name = "chick-distributor"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "chick_distributor"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.17.0"
anchor-spl = "0.17.0"
solana-program = "1.7.11"
spl-associated-token-account = { version = "1.0.3", features = [
    "no-entrypoint"
] }
